--- a/whatsapp_notifications/whatsapp_notifications/doctype/evolution_api_settings/evolution_api_settings.json
+++ b/whatsapp_notifications/whatsapp_notifications/doctype/evolution_api_settings/evolution_api_settings.json
@@ -67,7 +67,7 @@
         },
         {
             "fieldname": "api_key",
-            "fieldtype": "Password",
+            "fieldtype": "Data",
             "label": "API Key",
             "description": "Evolution API authentication key"
         },
