--- a/whatsapp_notifications/whatsapp_notifications/doctype/envio_whatsapp_catequese/envio_whatsapp_catequese.json
+++ b/whatsapp_notifications/whatsapp_notifications/doctype/envio_whatsapp_catequese/envio_whatsapp_catequese.json
@@ -11,21 +11,20 @@
         "column_break_status",
         "data_criacao",
         "section_mensagem",
+        "mensagem_html",
         "mensagem",
         "section_adicionar",
+        "adicionar_html",
         "tipo_destinatario",
         "catecumeno",
         "catequista",
         "turma",
         "preparacao_sacramento",
         "numeros_manuais",
-        "column_break_adicionar",
-        "adicionar_destinatarios",
         "section_destinatarios",
         "destinatarios",
         "section_envio",
-        "enviar",
-        "column_break_envio",
+        "enviar_html",
         "total_destinatarios",
         "total_enviados",
         "total_falhados",
@@ -36,7 +35,7 @@
         {
             "fieldname": "section_status",
             "fieldtype": "Section Break",
-            "label": "Status"
+            "hide_border": 1
         },
         {
             "fieldname": "status",
@@ -45,7 +44,8 @@
             "label": "Status",
             "options": "Rascunho\nEnviando\nEnviado\nEnviado Parcialmente\nFalhou",
             "default": "Rascunho",
-            "read_only": 1
+            "read_only": 1,
+            "hidden": 1
         },
         {
             "fieldname": "column_break_status",
@@ -56,128 +56,128 @@
             "fieldtype": "Datetime",
             "label": "Data de Cria\u00e7\u00e3o",
             "default": "Now",
-            "read_only": 1
+            "read_only": 1,
+            "hidden": 1
         },
         {
             "fieldname": "section_mensagem",
             "fieldtype": "Section Break",
-            "label": "Mensagem"
+            "hide_border": 1
+        },
+        {
+            "fieldname": "mensagem_html",
+            "fieldtype": "HTML",
+            "label": "Mensagem Header"
         },
         {
             "fieldname": "mensagem",
             "fieldtype": "Text",
             "label": "Mensagem",
             "reqd": 1,
-            "description": "Texto da mensagem WhatsApp. Pode usar formata\u00e7\u00e3o: *negrito* _it\u00e1lico_ ~riscado~"
+            "hidden": 1
         },
         {
             "fieldname": "section_adicionar",
             "fieldtype": "Section Break",
-            "label": "Adicionar Destinat\u00e1rios",
+            "hide_border": 1,
             "depends_on": "eval:doc.status=='Rascunho'"
+        },
+        {
+            "fieldname": "adicionar_html",
+            "fieldtype": "HTML",
+            "label": "Adicionar Destinat\u00e1rios"
         },
         {
             "fieldname": "tipo_destinatario",
             "fieldtype": "Select",
             "label": "Tipo de Destinat\u00e1rio",
             "options": "\nManual\nCatecumeno\nCatequista\nTurma\nPreparacao do Sacramento",
-            "description": "Seleccione a origem dos destinat\u00e1rios"
+            "hidden": 1
         },
         {
             "fieldname": "catecumeno",
             "fieldtype": "Link",
             "label": "Catecumeno",
             "options": "Catecumeno",
-            "depends_on": "eval:doc.tipo_destinatario=='Catecumeno'"
+            "hidden": 1
         },
         {
             "fieldname": "catequista",
             "fieldtype": "Link",
             "label": "Catequista",
             "options": "Catequista",
-            "depends_on": "eval:doc.tipo_destinatario=='Catequista'"
+            "hidden": 1
         },
         {
             "fieldname": "turma",
             "fieldtype": "Link",
             "label": "Turma",
             "options": "Turma",
-            "depends_on": "eval:doc.tipo_destinatario=='Turma'"
+            "hidden": 1
         },
         {
             "fieldname": "preparacao_sacramento",
             "fieldtype": "Link",
             "label": "Prepara\u00e7\u00e3o do Sacramento",
             "options": "Preparacao do Sacramento",
-            "depends_on": "eval:doc.tipo_destinatario=='Preparacao do Sacramento'"
+            "hidden": 1
         },
         {
             "fieldname": "numeros_manuais",
             "fieldtype": "Small Text",
             "label": "N\u00fameros Manuais",
-            "depends_on": "eval:doc.tipo_destinatario=='Manual'",
-            "description": "Um n\u00famero por linha ou separados por v\u00edrgula"
-        },
-        {
-            "fieldname": "column_break_adicionar",
-            "fieldtype": "Column Break"
-        },
-        {
-            "fieldname": "adicionar_destinatarios",
-            "fieldtype": "Button",
-            "label": "Adicionar Destinat\u00e1rios"
+            "hidden": 1
         },
         {
             "fieldname": "section_destinatarios",
             "fieldtype": "Section Break",
-            "label": "Lista de Destinat\u00e1rios"
+            "hide_border": 1
         },
         {
             "fieldname": "destinatarios",
             "fieldtype": "Table",
             "label": "Destinat\u00e1rios",
-            "options": "Destinatario WhatsApp Catequese"
+            "options": "Destinatario WhatsApp Catequese",
+            "hidden": 1
         },
         {
             "fieldname": "section_envio",
             "fieldtype": "Section Break",
-            "label": "Envio"
+            "hide_border": 1
         },
         {
-            "fieldname": "enviar",
-            "fieldtype": "Button",
-            "label": "Enviar Mensagens",
-            "depends_on": "eval:doc.status=='Rascunho'"
-        },
-        {
-            "fieldname": "column_break_envio",
-            "fieldtype": "Column Break"
+            "fieldname": "enviar_html",
+            "fieldtype": "HTML",
+            "label": "Enviar"
         },
         {
             "fieldname": "total_destinatarios",
             "fieldtype": "Int",
             "label": "Total Destinat\u00e1rios",
             "read_only": 1,
-            "default": "0"
+            "default": "0",
+            "hidden": 1
         },
         {
             "fieldname": "total_enviados",
             "fieldtype": "Int",
             "label": "Total Enviados",
             "read_only": 1,
-            "default": "0"
+            "default": "0",
+            "hidden": 1
         },
         {
             "fieldname": "total_falhados",
             "fieldtype": "Int",
             "label": "Total Falhados",
             "read_only": 1,
-            "default": "0"
+            "default": "0",
+            "hidden": 1
         },
         {
             "fieldname": "section_resultado",
             "fieldtype": "Section Break",
-            "label": "Resultado",
+            "hide_border": 1,
             "depends_on": "eval:doc.status!='Rascunho'"
         },
         {
