--- a/whatsapp_notifications/whatsapp_notifications/workspace/whatsapp_notifications/whatsapp_notifications.json
+++ b/whatsapp_notifications/whatsapp_notifications/workspace/whatsapp_notifications/whatsapp_notifications.json
@@ -5,7 +5,7 @@
  "doctype": "Workspace",
  "extends_another_page": 0,
  "hide_custom": 0,
- "icon": "fa fa-comments",
+ "icon": "notification",
  "is_hidden": 0,
  "label": "WhatsApp Notifications",
  "links": [
