whatsapp birthday rules

--- a/whatsapp_notifications/whatsapp_notifications/workspace/whatsapp_notifications/whatsapp_notifications.json
+++ b/whatsapp_notifications/whatsapp_notifications/workspace/whatsapp_notifications/whatsapp_notifications.json
@@ -40,6 +40,17 @@
    "type": "Link"
   },
   {
+   "dependencies": "",
+   "hidden": 0,
+   "is_query_report": 0,
+   "label": "WhatsApp Birthday Rule",
+   "link_count": 0,
+   "link_to": "WhatsApp Birthday Rule",
+   "link_type": "DocType",
+   "onboard": 0,
+   "type": "Link"
+  },
+  {
    "hidden": 0,
    "is_query_report": 0,
    "label": "Mensagens",
