--- a/whatsapp_notifications/whatsapp_notifications/doctype/whatsapp_notification_rule/whatsapp_notification_rule.json
+++ b/whatsapp_notifications/whatsapp_notifications/doctype/whatsapp_notification_rule/whatsapp_notification_rule.json
@@ -12,16 +12,16 @@
         "document_type",
         "event",
         "column_break_trigger",
-        "condition",
         "value_changed",
+        "condition",
         "section_recipient",
+        "recipient_type",
         "phone_field",
         "use_child_table",
         "child_table",
         "child_phone_field",
         "only_changed_rows",
         "row_condition",
-        "recipient_type",
         "column_break_recipient",
         "fixed_recipients",
         "group_id",
@@ -64,7 +64,7 @@
         {
             "fieldname": "section_trigger",
             "fieldtype": "Section Break",
-            "label": "Trigger Configuration"
+            "label": "When to Send"
         },
         {
             "fieldname": "document_type",
@@ -89,13 +89,6 @@
             "fieldtype": "Column Break"
         },
         {
-            "fieldname": "condition",
-            "fieldtype": "Code",
-            "label": "Condition (Optional)",
-            "description": "Jinja2 condition. Send only if evaluates to True. Example: {{ doc.status == 'Approved' }}",
-            "options": "Jinja"
-        },
-        {
             "fieldname": "value_changed",
             "fieldtype": "Select",
             "label": "Value Changed (for On Change)",
@@ -103,15 +96,31 @@
             "depends_on": "eval:doc.event=='On Change'"
         },
         {
+            "fieldname": "condition",
+            "fieldtype": "Code",
+            "label": "Condition (Optional)",
+            "description": "Jinja2 condition. Send only if evaluates to True. Example: {{ doc.status == 'Approved' }}",
+            "options": "Jinja"
+        },
+        {
             "fieldname": "section_recipient",
             "fieldtype": "Section Break",
-            "label": "Recipient Configuration"
+            "label": "Who to Notify"
+        },
+        {
+            "fieldname": "recipient_type",
+            "fieldtype": "Select",
+            "label": "Recipient Type",
+            "options": "Field Value\nFixed Number\nBoth\nGroup\nPhone and Group",
+            "default": "Field Value",
+            "description": "\"Field Value\": send to phone in the document.\n\"Fixed Number\": always send to specific numbers.\n\"Both\": document field + fixed numbers.\n\"Group\": send to a WhatsApp group (click Select Group).\n\"Phone and Group\": document field phone + a group."
         },
         {
             "fieldname": "phone_field",
             "fieldtype": "Select",
             "label": "Phone Field",
-            "description": "Document field containing recipient phone number (e.g., mobile_no, phone, contact_mobile)"
+            "description": "Document field containing recipient phone number (e.g., mobile_no, phone, contact_mobile)",
+            "depends_on": "eval:['Field Value','Both','Phone and Group'].includes(doc.recipient_type)"
         },
         {
             "default": "0",
@@ -152,14 +161,6 @@
             "depends_on": "eval:doc.use_child_table==1 && doc.child_table"
         },
         {
-            "fieldname": "recipient_type",
-            "fieldtype": "Select",
-            "label": "Recipient Type",
-            "options": "Field Value\nFixed Number\nBoth\nGroup\nPhone and Group",
-            "default": "Field Value",
-            "description": "How to determine recipients"
-        },
-        {
             "fieldname": "column_break_recipient",
             "fieldtype": "Column Break"
         },
@@ -194,7 +195,7 @@
         {
             "fieldname": "section_message",
             "fieldtype": "Section Break",
-            "label": "Message Configuration"
+            "label": "Message"
         },
         {
             "fieldname": "message_type",
@@ -229,7 +230,7 @@
         {
             "fieldname": "section_owner_notification",
             "fieldtype": "Section Break",
-            "label": "Default Notification Recipients",
+            "label": "Also Notify (Optional)",
             "collapsible": 1
         },
         {
@@ -250,7 +251,7 @@
         {
             "fieldname": "section_advanced",
             "fieldtype": "Section Break",
-            "label": "Advanced Options",
+            "label": "Advanced",
             "collapsible": 1
         },
         {
