--- a/whatsapp_notifications/whatsapp_notifications/doctype/envio_whatsapp_catequese/envio_whatsapp_catequese.json
+++ b/whatsapp_notifications/whatsapp_notifications/doctype/envio_whatsapp_catequese/envio_whatsapp_catequese.json
@@ -1,7 +1,7 @@
 {
     "actions": [],
     "allow_rename": 0,
-    "autoname": "ENVIO-CAT-.#####",
+    "autoname": "ENVIO-CAT-.YY.-.##",
     "creation": "2024-01-01 00:00:00.000000",
     "doctype": "DocType",
     "engine": "InnoDB",
