--- a/whatsapp_notifications/whatsapp_notifications/doctype/whatsapp_approval_template/whatsapp_approval_template.json
+++ b/whatsapp_notifications/whatsapp_notifications/doctype/whatsapp_approval_template/whatsapp_approval_template.json
@@ -1,7 +1,7 @@
 {
     "actions": [],
     "allow_rename": 1,
-    "autoname": "field:template_name",
+    "autoname": "WATPL-.YY.-.##",
     "creation": "2024-01-01 00:00:00.000000",
     "doctype": "DocType",
     "engine": "InnoDB",
