--- a/whatsapp_notifications/whatsapp_notifications/doctype/whatsapp_auto_report/whatsapp_auto_report.json
+++ b/whatsapp_notifications/whatsapp_notifications/doctype/whatsapp_auto_report/whatsapp_auto_report.json
@@ -1,7 +1,7 @@
 {
     "actions": [],
     "allow_rename": 1,
-    "autoname": "field:report_name",
+    "autoname": "WART-.YY.-.##",
     "creation": "2024-01-01 00:00:00.000000",
     "doctype": "DocType",
     "engine": "InnoDB",
