--- a/whatsapp_notifications/whatsapp_notifications/doctype/whatsapp_birthday_rule/whatsapp_birthday_rule.json
+++ b/whatsapp_notifications/whatsapp_notifications/doctype/whatsapp_birthday_rule/whatsapp_birthday_rule.json
@@ -1,7 +1,7 @@
 {
     "actions": [],
     "allow_rename": 1,
-    "autoname": "field:rule_name",
+    "autoname": "WABD-.YY.-.##",
     "creation": "2024-01-01 00:00:00.000000",
     "doctype": "DocType",
     "engine": "InnoDB",
